# zadania

./: 0db2536e-e04d-4b45-8517-cfddda004444program_do_sortowania (1).py  liczby  liczby.py  sort
CLI_AddresBook/: setup.py
CLI_AddresBook/Modules/: __init__.py  commands.py  logic.py  project_address_book.py  serialization.py
Nowy folder/: Dockerfile  app.py  comands.py  con  logic.py  notebook.py  pyproject.toml  requirements.txt
Nowy folder (3)/Nowy folder/: docker-compose.yml  main.py  pyvenv.cfg
Nowy folder (5)/: zad1.py
Nowy folder (5)/zadanie_10/: manage.py
strona/migrations/: 0001_initial.py
user/: views.py
zad1/: zad1.py
zad11/: schemas.py
zad11/conf/: config.py
zad11/database/: db.py  models.py
zad11/doc/: index.rst
zad11/repository/: auth.py  contact.py  user.py
zad11/routes/: contact.py  (+1 more)
zad13/: manage.py
zad13ad2/: schemas.py
zad4/: main.py
zad5/: zad5.py
zad8/: main.py
zad_7/: alembic.ini  main.py  my_select.py  sqlalchemy_szkoła.db
zadanie_10/: asgi.py  urls.py
zadanie_9/: main.py
zadanie___11/: pyproject.toml
zadanie___11/database/: models.py
zadanie___11/routes/: contact.py
zadanie___11/services/: email.py
zadanie___11/services/template/: email.html
zadanie___11/zad11/: schemas.py
zadanie___11/zad11/database/: db.py  models.py
zadanie___11/zad11/repository/: contact.py
zadanie___11/zad11/routes/: contact.py
zadanie___12/: pyproject.toml
zag6/: main.py  query_1.sql  query_10.sql  query_2sql.sql  query_3.sql  query_4.sql  query_5.sql  query_6.sql  query_7.sql  query_8.sql  query_9.sql  school.db
(+58 files in other folders)
